syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.server_info";
option java_outer_classname = "InfoProto";

package server_info;

message DevicesInfoRequest {}

message DevicesInfoResponse {
  repeated string devices = 1;
}

service InfoService {
  rpc GetInfo (DevicesInfoRequest) returns (DevicesInfoResponse) {}
}